--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Kathryn's Final Project - ART 199</h1>
+<title>Kathryn's Final Project - ART 199</title>
 
 
-<h2>Vector graphic of Adult Salmon</h2>
+<h1>Vector graphic of Adult Salmon</h1>
