--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <title>Kathryn's Final Project - ART 199</title>
 
 
-<h1>Vector graphic of Adult Salmon</h1>
+<h1>Salmon life stages</h1>
+
+<h1>Graphical Abstract</h1>
