--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <head>
 <title>Kathryn's Final Project - ART 199</title>
+</header>
 <body>
 <h1>Salmon life stages</h1>
 <h1>Graphical Abstract</h1>
+<body>
