--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<head>
-<title>Kathryn's Final Project - ART 199</title>
-</header>
 <body>
+<title>Kathryn's Final Project - ART 199</title>
 <h1>Salmon life stages</h1>
 <h1>Graphical Abstract</h1>
-<body>
+</body>
