--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
-<title>Kathryn's Final Project - ART 199</title>
-<h1>Salmon life stages</h1>
-<h1>Graphical Abstract</h1>
+<h1>Kathryn's Final Project - ART 199</h1>
+<h2>Salmon life stages</h2>
+<h2>Graphical Abstract</h2>
 </body>
