--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <body>
 <h1>Kathryn's Final Project - ART 199</h1>
 <h2>Salmon life stages</h2>
+  <img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" height="583" width="1626">
 <h2>Graphical Abstract</h2>
 </body>
