--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <body>
 <h1>Kathryn's Final Project - ART 199</h1>
 <h2>Salmon life stages</h2>
-  <img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" height="583" width="1626">
+  <h3>Adult Salmon</h3>
+  <img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
+  <h3>Yearling</h3>
+  <h3>Smolt</h3>
+  <h3>fry</h3>
 <h2>Graphical Abstract</h2>
 </body>
