--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <h3>Adult Salmon</h3>
   <img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h3>Yearling</h3>
+  <img src="yearling copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h3>Smolt</h3>
+  <img src="smolt copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h3>fry</h3>
+  <img src="fry2 copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h2>Graphical Abstract</h2>
 </body>
