--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <h1>Kathryn's Final Project - ART 199</h1>
 <h2>Salmon life stages</h2>
 <h3>Adult Salmon</h3>
-  <img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
+  <img src="adult salmon copy.PNG" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h3>Yearling</h3>
-  <img src="yearling copy.png" alt="vector graphic of a yearling, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
+  <img src="Yearling copy.PNG" alt="vector graphic of a yearling, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h3>Smolt</h3>
-  <img src="smolt copy.png" alt="vector graphic of a smolt, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
+  <img src="smolt copy.PNG" alt="vector graphic of a smolt, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h3>fry</h3>
-  <img src="fry2 copy.png" alt="vector graphic of a fry, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
+  <img src="fry2 copy.PNG" alt="vector graphic of a fry, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h2>Graphical Abstract</h2>
 </body>
