--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <body>
-<h1>Kathryn's Final Project - ART 199</h1>
-<h2>Salmon life stages</h2>
-<h3>Adult Salmon</h3>
-  <img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
-<h3>Yearling</h3>
-  <img src="Yearling copy.png" alt="vector graphic of a yearling, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
-<h3>Smolt</h3>
-  <img src="smolt copy.png" alt="vector graphic of a smolt, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
-<h3>fry</h3>
-  <img src="fry2 copy.png" alt="vector graphic of a fry, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
-<h2>Graphical Abstract</h2>
+  <h1><center>Kathryn's Final Project - ART 199</center></h1>
+  <h2><center>Salmon life stages</center></h2>
+  <h3><center>Adult Salmon</center></h3>
+  <center><img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
+<h3><center>Yearling</center></h3>
+  <center><img src="Yearling copy.png" alt="vector graphic of a yearling, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
+<h3><center>Smolt<center></h3>
+  <center><img src="smolt copy.png" alt="vector graphic of a smolt, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
+<h3>fry</h3></center>
+  <center><img src="fry2 copy.png" alt="vector graphic of a fry, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
+    <h2><center>Graphical Abstract</center></h2>
+<h3><center>final graphical abstract will go here when complete</center></h3>
+  
+  
 </body>
