--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <center><img src="smolt copy.png" alt="vector graphic of a smolt, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <h3>fry</h3></center>
   <center><img src="fry2 copy.png" alt="vector graphic of a fry, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
-    <h2><center>Graphical Abstract</center></h2>
-<h3><center>final graphical abstract will go here when complete</center></h3>
+    
+  
+  <h2><center>Graphical Abstract</center></h2>
+<h3><center>(final graphical abstract will go here when complete)</center></h3>
   
   
 </body>
