--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
   <center><img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
 <br>
 <br>
+<br>
 <h3><center>Yearling</center></h3>
   <center><img src="Yearling copy.png" alt="vector graphic of a yearling, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
+<br>
 <br>
 <br>
 <h3><center>Smolt<center></h3>
   <center><img src="smolt copy.png" alt="vector graphic of a smolt, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
 <br>
 <br>
-<h3>fry</h3></center>
+<br>
+<h3>Fry</h3></center>
   <center><img src="fry2 copy.png" alt="vector graphic of a fry, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
