--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
 <br>
   <h1><center>Kathryn's Final Project - ART 199</center></h1>
-  <h2><center>Salmon life stages</center></h2>
+  <h2><center>Salmon Life Stages:</center></h2>
   <h3><center>Adult Salmon</center></h3>
   <center><img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
 <br>
