--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <body>
 <br>
-  <h1><center>Kathryn's Final Project - ART 199 style="font-family: "Lucida Console", "Courier New", monospace'</center></h1>
+.body{font-family: "Lucida Console", "Courier New", monospace;}
+  <h1><center>Kathryn's Final Project - ART 199</center></h1>
   <h2><center>Salmon Life Stages:</center></h2>
   <h3><center>Adult Salmon</center></h3>
   <center><img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
