--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Kathryn's DataVis Website</title>
+  <meta name="description" content="dataviswebsite">
+  <meta name="author" content="Kathryn">
+
+  <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+</head>
 <body>
-<br>
-  <h1><center>Kathryn's Final Project - ART 199</center></h1>
+  <div id="title"> 
+    <h1><center>Kathryn's Final Project - ART 199</center></h1>
+  </div>
+
   <h2><center>Salmon Life Stages:</center></h2>
-  <h3><center>Adult Salmon</center></h3>
-  <center><img src="adult salmon copy.png" alt="vector graphic of an adult salmon, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h3><center>Yearling</center></h3>
-  <center><img src="Yearling copy.png" alt="vector graphic of a yearling, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h3><center>Smolt<center></h3>
-  <center><img src="smolt copy.png" alt="vector graphic of a smolt, made in adobe illustrator" style="width: 55vw; min-width: 330px;">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h3>Fry</h3></center>
-  <center><img src="fry2 copy.png" alt="vector graphic of a fry, made in adobe illustrator" style="width: 55vw; min-width: 330px;"></center>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-  <h2><center>Graphical Abstract</center></h2>
-<h3><center>(final graphical abstract will go here when complete)</center></h3>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="Assets/fry2 copy.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Assets/smolt copy.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Assets/Yearling copy.png" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <!-- <h2><center>Graphical Abstract</center></h2>
+<h3><center>(final graphical abstract will go here when complete)</center></h3> -->
+
   
 </body>
+</html>
