--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="index.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 <body>
   <div id="title"> 
@@ -18,23 +21,41 @@
   </div>
 
   <h2><center>Salmon Life Stages:</center></h2>
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+
+  <div id="car" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#car" data-slide-to="0" class="active"></li>
+      <li data-target="#car" data-slide-to="1"></li>
+      <li data-target="#car" data-slide-to="2"></li>
+    </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="Assets/fry2 copy.png" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>slide 1</h5>
+          <p>text</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="Assets/smolt copy.png" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>slide 2</h5>
+          <p>text</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="Assets/Yearling copy.png" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>slide 3</h5>
+          <p>text</p>
+        </div>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#car" role="button" onclick="prev()" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#car" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -43,6 +64,8 @@
   <!-- <h2><center>Graphical Abstract</center></h2>
 <h3><center>(final graphical abstract will go here when complete)</center></h3> -->
 
-  
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
 </body>
 </html>
