--- a/index.html
+++ b/index.html
@@ -23,33 +23,35 @@
   <h2><center>Salmon Life Stages:</center></h2>
 
   <div id="car" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#car" data-slide-to="0" class="active"></li>
-      <li data-target="#car" data-slide-to="1"></li>
-      <li data-target="#car" data-slide-to="2"></li>
-    </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="Assets/fry2 copy.png" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
-          <h5>slide 1</h5>
+          <h5>Fry</h5>
           <p>text</p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="Assets/smolt copy.png" alt="Second slide">
         <div class="carousel-caption d-none d-md-block">
-          <h5>slide 2</h5>
+          <h5>Smolt</h5>
           <p>text</p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="Assets/Yearling copy.png" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
-          <h5>slide 3</h5>
+          <h5>Yearling</h5>
           <p>text</p>
         </div>
       </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Assets/adult salmon copy.png" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Adult Salmon</h5>
+          <p>text</p>
+        </div>
+      </div> 
     </div>
     <a class="carousel-control-prev" href="#car" role="button" onclick="prev()" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
