--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="Assets/adult salmon copy.png" alt="Third slide">
+        <img class="d-block w-100" src="Assets/adult salmon copy.png" alt="forth slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>Adult Salmon</h5>
           <p>text</p>
