--- a/index.html
+++ b/index.html
@@ -63,8 +63,40 @@
     </a>
   </div>
 
-  <!-- <h2><center>Graphical Abstract</center></h2>
-<h3><center>(final graphical abstract will go here when complete)</center></h3> -->
+  <h2><center>Graphical Abstract</center></h2>
+  <div id="car2" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="Assets/fry2 copy.png" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Fry</h5>
+        <p>text</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="Assets/smolt copy.png" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Smolt</h5>
+        <p>text</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="Assets/Yearling copy.png" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Yearling</h5>
+        <p>text</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#car2" role="button" onclick="prev()" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#car2" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
