--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
   <div id="title"> 
     <h1><center>Kathryn's Final Project - ART 199</center></h1>
   </div>
-
+  <div id="stages"> 
   <h2><center>Salmon Life Stages:</center></h2>
+  </div>
 
   <div id="car" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
@@ -63,7 +64,10 @@
     </a>
   </div>
 
-  <h2><center>Graphical Abstract</center></h2>
+  <div id="abstract">
+     <h2><center>Graphical Abstract:</center></h2>
+    </div>
+
   <div id="car2" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -97,7 +101,8 @@
     <span class="sr-only">Next</span>
   </a>
   </div>
-
+  <div id ="end"> 
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
