--- a/index.html
+++ b/index.html
@@ -71,24 +71,24 @@
   <div id="car2" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="Assets/fry2 copy.png" alt="First slide">
+      <img class="d-block w-100" src="Assets/replace1.png" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Fry</h5>
-        <p>text</p>
+        <!-- <h5>Wet Conditions</h5> -->
+        <!-- <p>text</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="Assets/smolt copy.png" alt="Second slide">
+      <img class="d-block w-100" src="Assets/replace2.png" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Smolt</h5>
-        <p>text</p>
+        <!-- <h5>Dry Conditions</h5> -->
+        <!-- <p>text</p> -->
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="Assets/Yearling copy.png" alt="Third slide">
+      <img class="d-block w-100" src="Assets/replace3.png" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Yearling</h5>
-        <p>text</p>
+        <!-- <h5>Breif Description of prohject</h5> -->
+        <!-- <p>text</p> -->
       </div>
     </div>
   </div>
