--- a/index.html
+++ b/index.html
@@ -22,84 +22,85 @@
   <div id="stages"> 
   <h2><center>Salmon Life Stages:</center></h2>
   </div>
-
-  <div id="car" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="Assets/fry2 copy.png" alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Fry</h5>
-          <p>text</p>
+  <div id="box1">
+    <div id="car" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="Assets/fry2 copy.png" alt="First slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Fry</h5>
+            <p>text</p>
+          </div>
         </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="Assets/smolt copy.png" alt="Second slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Smolt</h5>
+            <p>text</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="Assets/Yearling copy.png" alt="Third slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Yearling</h5>
+            <p>text</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="Assets/adult salmon copy.png" alt="forth slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Adult Salmon</h5>
+            <p>text</p>
+          </div>
+        </div> 
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="Assets/smolt copy.png" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Smolt</h5>
-          <p>text</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="Assets/Yearling copy.png" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Yearling</h5>
-          <p>text</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="Assets/adult salmon copy.png" alt="forth slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Adult Salmon</h5>
-          <p>text</p>
-        </div>
-      </div> 
+      <a class="carousel-control-prev" href="#car" role="button" onclick="prev()" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#car" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#car" role="button" onclick="prev()" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#car" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
-
   <div id="abstract">
      <h2><center>Graphical Abstract:</center></h2>
     </div>
-
-  <div id="car2" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="Assets/replace1.png" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Wet Conditions</h5> -->
-        <!-- <p>text</p> -->
+  <div id="box2">
+    <div id="car2" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="Assets/replace1.png" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h5>Wet Conditions</h5> -->
+          <!-- <p>text</p> -->
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Assets/replace2.png" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h5>Dry Conditions</h5> -->
+          <!-- <p>text</p> -->
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Assets/replace3.png" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h5>Breif Description of prohject</h5> -->
+          <!-- <p>text</p> -->
+        </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="Assets/replace2.png" alt="Second slide">
-      <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Dry Conditions</h5> -->
-        <!-- <p>text</p> -->
-      </div>
+    <a class="carousel-control-prev" href="#car2" role="button" onclick="prev()" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#car2" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="Assets/replace3.png" alt="Third slide">
-      <div class="carousel-caption d-none d-md-block">
-        <!-- <h5>Breif Description of prohject</h5> -->
-        <!-- <p>text</p> -->
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#car2" role="button" onclick="prev()" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#car2" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
   </div>
   <div id ="end"> 
   </div>
