--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="Assets/datavis diagram dry.png" alt="Second slide">
+        <img class="d-block w-100" src="Assets/Diagram2.png" alt="Second slide">
         <div class="carousel-caption d-none d-md-block">
           
           <h5>Dry Conditions</h5>
